Fix tab selected bar not visible due to color

--- a/src/app/pages/player/player-match-history/player-match-history.component.scss
+++ b/src/app/pages/player/player-match-history/player-match-history.component.scss
@@ -12,3 +12,7 @@
 .loading-spinner {
   margin: auto;
 }
+
+::ng-deep .mat-ink-bar {
+  background-color: white !important;
+}
